styles.css
@font-face {
  font-family: 'Digital7';
  src:
    url('./assets/font/digital-7-webfont.woff2') format('woff2'),
    url('./assets/font/digital-7.woff')  format('woff'),
    url('./assets/font/digital-7.ttf')   format('truetype');
  font-weight: normal;
  font-style: normal;
  font-display: swap;   /* shows fallback text until the font loads */
}

body {
    background-color: #0d1117;
}
.header {
    /* border: 2px solid red; */
    height: 60px;
    display: flex;
    justify-content: space-between;
    background-color: #010409;
}

.container {
    /* border: 2px solid red; */
    height: 700px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.calculator {
    /* border: 2px solid red; */
    border-radius: 20px;
    width: 350px;
    height: 500px;
    font-size: 14px;
    padding: 6px 16px;
    font-weight: 400;
    border: none;
    outline: none;
    color: #000;
    background: linear-gradient(
        45deg,
        #999 5%,
        #fff 10%,
        #ccc 30%,
        #ddd 50%,
        #ccc 70%,
        #fff 80%,
        #999 95%
    );
    text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);
    border-radius: 10px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
}

.screen {
    /* border: 2px solid red; */
    border-radius: 10px;
    display: flex;
    justify-content: end;
    align-items: center;
    width: 300px;
    height: 50px;
    margin: auto;
    margin-top: 15px;
    margin-bottom: 10px;
    padding-right: 10px;
    background-color: #232522;
    color: #39FF14;
    font-family: "Digital7";
    letter-spacing: 0.05em;
    font-size: 42px;
}

.button-container {
    /* border: 2px solid red; */
    height: 400px;
    width: 100%;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 0;
}

.button-container button {
    width: 100px;
    height: 80px;
    flex: 0 0 25%;
    font-family: Inter;
    font-size: 24px;
    border-radius: 5px;
    cursor: pointer;
}

.button-container button:hover {
    transform:translateY(-2px);
}

.footer {
    /* border: 2px solid red; */
    height: 50px; 
    display: flex;
    justify-content: center;
    align-items: center;
}

a {
    text-decoration: none;
    color: white;
    font-family: Inter;
}

a:hover {
    color: lightblue;
}

.header button {
    width: 200px;
    height: 50px;
    font-family: Inter;
    font-size: large;
    font-weight: 500;
    border: none;
    background-color: #010409;
    color: white;
    cursor: pointer
}

.header button:hover {
    color: lightblue;
}

.github-link {
    margin-left: auto;
}

